--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,6 +1,9 @@
 <div class="form-container">
   <div class="bento-grid cta-body">
     <div class="form-wrapper">
+      <div class="heading-container--sm">
+        <h3>Connect With Us</h3>
+      </div>
       <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
         <input type="hidden" name="access_key" value="your-web3forms-access-key-here" />
 
@@ -65,7 +68,7 @@
 
         <!-- Submit -->
         <div class="button-container">
-          <button type="submit" class="button">Send Message</button>
+          <button type="submit" class="button button-alt">Send Message</button>
         </div>
       </form>
     </div>
