--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -36,7 +36,7 @@ a.button,
 	&.button-alt {
 		color: $color-black;
 		background-color: $color-white;
-		border-color: $color-white;
+		border-color: $color-black;
 
 		&:hover {
 			background-color: $color-primary;
