--- a/_sass/global/_typography.scss
+++ b/_sass/global/_typography.scss
@@ -223,7 +223,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	padding: 0 $spacing-sm;
+	// padding: 0 $spacing-sm;
 	gap: $spacing-sm;
 
 	@container (min-width: #{$breakpoint-lg}) {
