--- a/_sass/global/_typography.scss
+++ b/_sass/global/_typography.scss
@@ -179,7 +179,7 @@ main {
 		align-items: center;
 		align-self: center;
 		max-width: $container-xl;
-		padding: 0 $spacing-xl;
+		padding: $spacing-xl;
 		text-align: center;
 	}
 
