--- a/_sass/global/_typography.scss
+++ b/_sass/global/_typography.scss
@@ -178,6 +178,7 @@ main {
 	@container (min-width: #{$container-lg}) {
 		align-items: center;
 		align-self: center;
+		gap: 0;
 		max-width: $container-xl;
 		padding: $spacing-xl $spacing-xl $spacing-xxxl;
 		text-align: center;
