--- a/_sass/global/_variables.scss
+++ b/_sass/global/_variables.scss
@@ -48,6 +48,7 @@ $line-height-xs: 1; // For jumbo/h1 text (display typography)
 // Font weight
 $font-weight-light: 300;
 $font-weight-regular: 400;
+$font-weight-medium: 500;
 $font-weight-bold: 600;
 $font-weight-black: 900;
 
